[package]
name = "mm"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15.3"
ndarray-rand = "0.13.0"
rand = "0.8.3"
rand_distr = "0.4.0"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
plotters = "0.3"

[dev-dependencies]
assert_approx_eq = "1.1.0"

[lib]
name = "mm"
path = "src/lib.rs"

[[bin]]
name = "mm"
path = "src/main.rs"